--- a/DL/1.단층인공신경망.ipynb
+++ b/DL/1.단층인공신경망.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b3d6df46-e36a-4934-870a-df76182d2ec8",
    "metadata": {},
    "outputs": [],
@@ -25,25 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "19383480-04ff-4b09-a293-c0e5b343e0cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-      "\u001b[1m29515/29515\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-      "\u001b[1m26421880/26421880\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-      "\u001b[1m5148/5148\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-      "\u001b[1m4422102/4422102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 패션 MNIST 데이터 로드\n",
     "(x_train, y_train), (x_test, y_test) = keras.datasets.fashion_mnist.load_data()"
@@ -51,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "501b601a-86e5-4f8f-849d-d23e7b3d15c9",
    "metadata": {},
    "outputs": [
@@ -83,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "1074d426-dfb3-4361-9d65-be19cb0b5c26",
    "metadata": {
     "scrolled": true
@@ -114,7 +99,7 @@
        "       247, 248, 249, 250, 251, 252, 253, 254, 255], dtype=uint8)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "46d2dbbb-b19d-4be4-a34c-2a153c4f6533",
    "metadata": {},
    "outputs": [
@@ -152,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "fb91c3aa-a46a-428f-aad3-140ea3dd1217",
    "metadata": {},
    "outputs": [
@@ -190,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "f3e3ab8f-d96a-4264-bb42-441246b53565",
    "metadata": {},
    "outputs": [
@@ -228,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "01572c79-0677-4eed-8cda-79e4c61c2eb4",
    "metadata": {},
    "outputs": [],
@@ -240,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2bbfd023-04fb-4f22-93d9-d2f0bbab9b46",
    "metadata": {},
    "outputs": [
@@ -258,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "038eb499-ce5c-4cd8-8755-27d8c7ff7426",
    "metadata": {},
    "outputs": [
@@ -276,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "6210d96c-c3fe-4b3b-98dc-2180b6f2bd22",
    "metadata": {},
    "outputs": [
@@ -390,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "eb9e5d63-742b-4ff7-8ccb-ba1f31a6c6f6",
    "metadata": {},
    "outputs": [],
@@ -402,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "518fbe4b-eff3-44e2-a3b5-5b1a33c79780",
    "metadata": {},
    "outputs": [
@@ -420,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "95a170e3-b1cf-4de4-a63a-314a5aa22a59",
    "metadata": {},
    "outputs": [
@@ -450,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "7cfedb33-4381-49f7-831b-f203a271d262",
    "metadata": {},
    "outputs": [],
@@ -483,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "777ea4d8-27c2-492a-b335-f86ce76600cf",
    "metadata": {},
    "outputs": [],
@@ -494,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "6475fade-e5e7-4353-a57b-d4204a77533a",
    "metadata": {},
    "outputs": [],
@@ -506,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "7e6ba2d3-eafb-4846-8c6a-6599184d700b",
    "metadata": {},
    "outputs": [
@@ -591,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "0d981406-6eb7-43ec-aa98-09be80251cd5",
    "metadata": {},
    "outputs": [
@@ -601,7 +586,7 @@
        "5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "d39c2d31-2f8c-46a5-8753-5a10d7b4e5dd",
    "metadata": {},
    "outputs": [],
@@ -640,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "62def834-1de4-4c49-94b4-afd05db5f521",
    "metadata": {},
    "outputs": [
@@ -649,24 +634,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 511us/step - accuracy: 0.7388 - loss: 0.7748\n",
+      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 595us/step - accuracy: 0.7411 - loss: 0.7774\n",
       "Epoch 2/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 504us/step - accuracy: 0.8361 - loss: 0.4887\n",
+      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 723us/step - accuracy: 0.8360 - loss: 0.4840\n",
       "Epoch 3/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 549us/step - accuracy: 0.8496 - loss: 0.4485\n",
+      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 620us/step - accuracy: 0.8482 - loss: 0.4519\n",
       "Epoch 4/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 530us/step - accuracy: 0.8517 - loss: 0.4390\n",
+      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 526us/step - accuracy: 0.8480 - loss: 0.4469\n",
       "Epoch 5/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 521us/step - accuracy: 0.8538 - loss: 0.4311\n"
+      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 502us/step - accuracy: 0.8539 - loss: 0.4326\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x23f694c9400>"
+       "<keras.src.callbacks.history.History at 0x23acc518c80>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "d96ac65c-7eeb-4af6-a91b-968dc4141604",
    "metadata": {},
    "outputs": [
@@ -686,16 +671,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m375/375\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 513us/step - accuracy: 0.8503 - loss: 0.4490\n"
+      "\u001b[1m375/375\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 510us/step - accuracy: 0.8397 - loss: 0.4679\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.4363422095775604, 0.8545833230018616]"
+       "[0.4573577046394348, 0.8419166803359985]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
