--- a/DL/5. 합성곱신경망(이미지 분류).ipynb
+++ b/DL/5. 합성곱신경망(이미지 분류).ipynb
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "0a6fd6ba",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
     }
    ],
    "source": [
-    "plt.Figure()\n",
+    "plt.figure()\n",
     "plt.bar(range(1, 11), preds[0])\n",
     "plt.xlabel(\"class\")\n",
     "plt.ylabel(\"prob.\")\n",
