--- a/DL/7. 순환신경망.ipynb
+++ b/DL/7. 순환신경망.ipynb
@@ -7,750 +7,191 @@
    "source": [
     "# 순차 데이터(sequential data)\n",
     "\n",
-    "- 텍스트나 시계열 데이터(time series data)와 같이 순서에 의미가 있는 데이터"
+    "- 텍스트나 시계열 데이터(time series data)와 같이 순서에 의미가 있는 데이터\n",
+    "  - 예) \"I am a boy\"는 의미를 이해할 수 있지만 \"Boy am i a\"는 의미를 이해할 수 없음\n",
+    "  - 일별 온도 데이터에서 날짜 순서가 섞인다면 내일의 온도를 쉽게 예상하기 어려움\n",
+    "\n",
+    "- 감성분석에서는 이전에 입력된 데이터를 기억하는 기능이 중요할 수 있음\n",
+    "  - 예) \"별로지만 추천해요\" 에서 \"추천해요\"를 해석할 떄 앞의 \"별로지만\"을 기억하고 있어야 무조건 긍정이라고 판단하지 않음\n",
+    "  - 밀집층이나 CNN은 이런 기억장치가 없음\n",
+    "    - 하나의 배치를 사용하여 정방향 연산을 수행하고 나면 해당 샘플은 다음 샘플을 처리할 떄 사용하지 않음\n",
+    "    - 이처럼 입력 데이터의 흐름이 앞으로만 전달되는 신경망을 피드포워드 신경망(feedforward neural network : FFNN)이라고 함\n",
+    "  - 신경망이 이전에 처리했던 샘플을 다음 샘플을 처리할 때 재사용하기 위해서는 데이ㅣ터가 신경망 층에서 순환을 해야함"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "d332564b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 순환 신경망(recurrent neral nerwork : RNN)\n",
+    "\n",
+    "<img src = \"./image/rnn.png\">"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "82d7c25b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 순환 신경망 구조\n",
+    "\n",
+    "- 피드포워드 신경망에 이전 데이터의 처리 흐름을 순환하는 고리 하나만 추가된 형태\n",
+    "  - 바로 이전에 사용했던 데이터를 재사용하는 구조"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "47a476e6",
+   "metadata": {},
+   "source": [
+    "<img src = \"./image/rnn_image1.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c3542df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. 첫 번쨰 샘플 x0을 처리하고 출력 h0가 다시 유닛으로 입력됨\n",
+    "   - h0에는 x0에 대한 정보가 포함되어 있음\n",
+    "\n",
+    "2. x1을 처리할 떄 h0을 함께 사용\n",
+    "   - h0과 x1을 사용해서 만든 h1애는 x0에 대한 정보가 어느 정도 포함되어 있음\n",
+    "\n",
+    "3. x2를 처리할 때 h1을 함꼐 사용\n",
+    "   - 결과물 h2에는 x1과 x0에 대한 정보도 담겨있음\n",
+    "\n",
+    "- 위의 과정처럼 샘플을 처리하는 각 단계를 타임스텝(timestep)이라고 말함\n",
+    "  - 순환 신경망은 이전 타임스텝의 샘플을 기억함\n",
+    "\n",
+    "- 타임스탭이 오래될수록 순환되는 정보는 희미해짐\n",
+    "\n",
+    "- 순환신경망에서는 layer를 셀(cell)이라고 부름\n",
+    "  - 하지만 입력에 가중치를 곱하고 활성화 함수를 통과시켜 다음 층으로 전달하는 기본 구조는 같음\n",
+    "  - 한 셀에는 여러 개의 유닛이 있지만 일반적으로 모든 유닛을 표시하지 않고 하나의 셀로 층을 표현함\n",
+    "\n",
+    "- 셀의 출력은 은닉상태(hidden state)라고 부름"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6285b5d5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 하이퍼볼릭 탄젠트 함수\n",
+    "\n",
+    "<img src = \"./image/tanh.png\">"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "22c7fc30",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 일반적으로 은닉층의 활성화 함수로는 하이퍼볼릭 탄젠트(Hyperbolic tangent) 함수인 tanh가 많이 활용됨\n",
+    "  - tanh 함수는 -1  ~ 1 사이의 범위를 가짐"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0f2b5ff3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 가중치 공유\n",
+    "\n",
+    "<img src = \"./image/rnn_weight.png\">"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1f7d09c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 순환 신경망도 피드포워드 신경망과 같이 입력값과 가중치를 곱하지만 이전 타임스텝의 은닉상태에 곱해지는 가중치가 하나 더 있음\n",
+    "\n",
+    "- 모든 타임 스텝에서 사용되는 가중치 W는 하나임\n",
+    "  - 가중치 W는 타임 스템에 따라 변화되는 유닛의 출력을 학습\n",
+    "\n",
+    "- 맨 처음 타임스텝1에서 사용되는 이전 은닉상태 h0는 이전 타임스템이 없기 때문에 0으로 초기화"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "92dd559f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 파라미터 수\n",
+    "\n",
+    "<img src = \"./image/rnn_param.png\">"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "ecf2ecb1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 각 유닛의 은닉 상태가 다음 스텝에 재사용될 때 모든 유닛에 값이 전달됨\n",
+    "  - 즉, 이전 타임스탭의 은닉 상태는 다음 타임스탭의 모든 유닛에 완전연결됨\n",
+    "\n",
+    "- 순환신경망의 파라미터 수 = (유닛 수 * 유닛 수) + (입력값의 수 * 유닛 수) + 유닛 수"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "527aab73",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da8329dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f3a171f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f8c36b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "421d7aee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41c2b7ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af11f100",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8c44325",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2aef7843",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ae910e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f0a9690",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c133e6c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6de532ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daeb580a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "936238e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83376dc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c4a7ba6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "281639ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36bf1182",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64e7948d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f71333a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c45631ab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18e878f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90dafc85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17820d88",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "179f1c81",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1057a238",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fee7b106",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d07253f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "654cea8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "492eb76b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf106979",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b3e6cf7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fead396f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "170f9c46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "531e1a35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0693b588",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1995da78",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0236516c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e415dd6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf8f576f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8f43472",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0009a61a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fd91405",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1945df5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f455d286",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "870cc352",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80992dfd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6de25b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "755a30ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4dca13c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec3546b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ee11036",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52ab3c43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a965ca79",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe7a474e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27cc66e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68564b16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "465d7785",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daaac85b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2b641ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40f8ea70",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11ef209a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68d079a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bc00561",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c312684",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdc585d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b01c1d23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "825876e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d955c7d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 입략\n",
+    "\n",
+    "- 합성곱 층의 입력은 하나의 샘플이 3개의 차원을 가짐\n",
+    "  - 너비, 높이, 채널\n",
+    "\n",
+    "- 순환층은 일반적으로 셈플마다 2개의 차원을 가짐\n",
+    "  - 하나의 샘플을 하나의 시퀀스(Sequence)라고 말함\n",
+    "  - 하나의 시퀀스 안에는 여러 개의 아이템이 들어 있음\n",
+    "  - 시퀀스의 길이가 타임스텝의 길이가 됨\n",
+    "    - 예) \"I am a boy\"는 4개의 아이템으로 구성된 시퀀스\n",
+    "    - 각 아이템을 3개의 숫자로 표현한다면 타임스템의 크기는 (1, 4, 3)\n",
+    "\n",
+    "- 입력이 순환층을 통과하면 순환층의 유닛 개수만큼 출력됨\n",
+    "  - 하나의 샘플은 (단어의 개수, 단어 표현)의 2차원 배열\n",
+    "  - 순환층을 통과하면 1차원 배열로 바뀜\n",
+    "    - 이 1차원 배열의 크기는 순환층의 유닛의 개수\n",
+    "  - 기본적으로 순환층은 마지막 타임스텝의 은닉 상태만 출력으로 내보냄\n",
+    "    - 입력된 시퀀스를 모두 읽어서 정보를 마지막 은닉 상태에 압축하여 전달\n",
+    "\n",
+    "- 만약 순환층을 여러 개 쌓는다면\n",
+    "  - 순환층의 입력은 샘플마다 타임스텝과 단어 표현으로 이루어진 2차원 배열이어야 함\n",
+    "    - 첫 번째 셀이 마지막 타임스텝의 은닉 상태만 출력한다면 입력 형식이 맞지 않음\n",
+    "    - 이 경우에는 마지막 셀을 제외한 모든 셀은 모든 타임 스텝의 은닉 상태를 출력\n",
+    "    - 마지막 셀은 마지막 타임스텝의 은닉 상태만 출력"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2621bfb0",
+   "metadata": {},
+   "source": [
+    "## 출력\n",
+    "\n",
+    "- 순한 신경망도 합성곱 신경망과 마찬가지로 마지막에 밀집층을 두어 클래스를 분류\n",
+    "  - 다중 분류 : 출력층에 클래스 개수만큼 유닛을 두고 소프트맥스 출력층 함수 사용\n",
+    "  - 이진 분류 : 하나의 유닛을 두고 시그모이드 출력층 함수 사용\n",
+    "\n",
+    "- 합성곱 신경망과 차이점은 마지막 셀의 출력이 1차원이기 때문에 Flatten이 필요 없음"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
