--- a/practice/pip설치.ipynb
+++ b/practice/pip설치.ipynb
@@ -127,6 +127,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting selenium\n",
+      "  Downloading selenium-4.33.0-py3-none-any.whl.metadata (7.5 kB)\n",
+      "Collecting urllib3~=2.4.0 (from urllib3[socks]~=2.4.0->selenium)\n",
+      "  Downloading urllib3-2.4.0-py3-none-any.whl.metadata (6.5 kB)\n",
+      "Collecting trio~=0.30.0 (from selenium)\n",
+      "  Downloading trio-0.30.0-py3-none-any.whl.metadata (8.5 kB)\n",
+      "Collecting trio-websocket~=0.12.2 (from selenium)\n",
+      "  Using cached trio_websocket-0.12.2-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Collecting certifi>=2025.4.26 (from selenium)\n",
+      "  Downloading certifi-2025.4.26-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting typing_extensions~=4.13.2 (from selenium)\n",
+      "  Downloading typing_extensions-4.13.2-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: websocket-client~=1.8.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from selenium) (1.8.0)\n",
+      "Collecting attrs>=23.2.0 (from trio~=0.30.0->selenium)\n",
+      "  Downloading attrs-25.3.0-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (3.7)\n",
+      "Collecting outcome (from trio~=0.30.0->selenium)\n",
+      "  Using cached outcome-1.3.0.post0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (1.3.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (1.17.1)\n",
+      "Collecting wsproto>=0.14 (from trio-websocket~=0.12.2->selenium)\n",
+      "  Using cached wsproto-1.2.0-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in c:\\programdata\\anaconda3\\lib\\site-packages (from urllib3[socks]~=2.4.0->selenium) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in c:\\programdata\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.30.0->selenium) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.12.2->selenium) (0.14.0)\n",
+      "Downloading selenium-4.33.0-py3-none-any.whl (9.4 MB)\n",
+      "   ---------------------------------------- 0.0/9.4 MB ? eta -:--:--\n",
+      "   ---------- ----------------------------- 2.4/9.4 MB 12.2 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 4.7/9.4 MB 11.9 MB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 7.3/9.4 MB 11.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 9.4/9.4 MB 11.7 MB/s eta 0:00:00\n",
+      "Downloading certifi-2025.4.26-py3-none-any.whl (159 kB)\n",
+      "Downloading trio-0.30.0-py3-none-any.whl (499 kB)\n",
+      "Using cached trio_websocket-0.12.2-py3-none-any.whl (21 kB)\n",
+      "Downloading typing_extensions-4.13.2-py3-none-any.whl (45 kB)\n",
+      "Downloading urllib3-2.4.0-py3-none-any.whl (128 kB)\n",
+      "Downloading attrs-25.3.0-py3-none-any.whl (63 kB)\n",
+      "Using cached outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
+      "Using cached wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: wsproto, urllib3, typing_extensions, certifi, attrs, outcome, trio, trio-websocket, selenium\n",
+      "  Attempting uninstall: urllib3\n",
+      "    Found existing installation: urllib3 2.2.3\n",
+      "    Uninstalling urllib3-2.2.3:\n",
+      "      Successfully uninstalled urllib3-2.2.3\n",
+      "  Attempting uninstall: typing_extensions\n",
+      "    Found existing installation: typing_extensions 4.11.0\n",
+      "    Uninstalling typing_extensions-4.11.0:\n",
+      "      Successfully uninstalled typing_extensions-4.11.0\n",
+      "  Attempting uninstall: certifi\n",
+      "    Found existing installation: certifi 2025.1.31\n",
+      "    Uninstalling certifi-2025.1.31:\n",
+      "      Successfully uninstalled certifi-2025.1.31\n",
+      "  Attempting uninstall: attrs\n",
+      "    Found existing installation: attrs 23.1.0\n",
+      "    Uninstalling attrs-23.1.0:\n",
+      "      Successfully uninstalled attrs-23.1.0\n",
+      "Successfully installed attrs-25.3.0 certifi-2025.4.26 outcome-1.3.0.post0 selenium-4.33.0 trio-0.30.0 trio-websocket-0.12.2 typing_extensions-4.13.2 urllib3-2.4.0 wsproto-1.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
