--- a/practice/pip설치.ipynb
+++ b/practice/pip설치.ipynb
@@ -309,6 +309,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: selenium in c:\\programdata\\anaconda3\\lib\\site-packages (4.33.0)\n",
+      "Requirement already satisfied: beautifulsoup4 in c:\\programdata\\anaconda3\\lib\\site-packages (4.12.3)\n",
+      "Requirement already satisfied: pandas in c:\\programdata\\anaconda3\\lib\\site-packages (2.2.2)\n",
+      "Collecting webdriver-manager\n",
+      "  Downloading webdriver_manager-4.0.2-py2.py3-none-any.whl.metadata (12 kB)\n",
+      "Requirement already satisfied: urllib3~=2.4.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from urllib3[socks]~=2.4.0->selenium) (2.4.0)\n",
+      "Requirement already satisfied: trio~=0.30.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from selenium) (0.30.0)\n",
+      "Requirement already satisfied: trio-websocket~=0.12.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from selenium) (0.12.2)\n",
+      "Requirement already satisfied: certifi>=2025.4.26 in c:\\programdata\\anaconda3\\lib\\site-packages (from selenium) (2025.4.26)\n",
+      "Requirement already satisfied: typing_extensions~=4.13.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from selenium) (4.13.2)\n",
+      "Requirement already satisfied: websocket-client~=1.8.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from selenium) (1.8.0)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from beautifulsoup4) (2.5)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\programdata\\anaconda3\\lib\\site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\lib\\site-packages (from webdriver-manager) (2.32.3)\n",
+      "Requirement already satisfied: python-dotenv in c:\\programdata\\anaconda3\\lib\\site-packages (from webdriver-manager) (0.21.0)\n",
+      "Requirement already satisfied: packaging in c:\\programdata\\anaconda3\\lib\\site-packages (from webdriver-manager) (24.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (25.3.0)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (3.7)\n",
+      "Requirement already satisfied: outcome in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (1.3.0.post0)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (1.3.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\programdata\\anaconda3\\lib\\site-packages (from trio~=0.30.0->selenium) (1.17.1)\n",
+      "Requirement already satisfied: wsproto>=0.14 in c:\\programdata\\anaconda3\\lib\\site-packages (from trio-websocket~=0.12.2->selenium) (1.2.0)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in c:\\programdata\\anaconda3\\lib\\site-packages (from urllib3[socks]~=2.4.0->selenium) (1.7.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->webdriver-manager) (3.3.2)\n",
+      "Requirement already satisfied: pycparser in c:\\programdata\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.30.0->selenium) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from wsproto>=0.14->trio-websocket~=0.12.2->selenium) (0.14.0)\n",
+      "Downloading webdriver_manager-4.0.2-py2.py3-none-any.whl (27 kB)\n",
+      "Installing collected packages: webdriver-manager\n",
+      "Successfully installed webdriver-manager-4.0.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install selenium beautifulsoup4 pandas webdriver-manager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting SPARQLWrapper\n",
+      "  Downloading SPARQLWrapper-2.0.0-py3-none-any.whl.metadata (2.0 kB)\n",
+      "Collecting rdflib>=6.1.1 (from SPARQLWrapper)\n",
+      "  Downloading rdflib-7.1.4-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: pyparsing<4,>=2.1.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from rdflib>=6.1.1->SPARQLWrapper) (3.1.2)\n",
+      "Downloading SPARQLWrapper-2.0.0-py3-none-any.whl (28 kB)\n",
+      "Downloading rdflib-7.1.4-py3-none-any.whl (565 kB)\n",
+      "   ---------------------------------------- 0.0/565.1 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 565.1/565.1 kB 9.8 MB/s eta 0:00:00\n",
+      "Installing collected packages: rdflib, SPARQLWrapper\n",
+      "Successfully installed SPARQLWrapper-2.0.0 rdflib-7.1.4\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install SPARQLWrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
