--- a/project_1/3. 데이터 train, test별로 나누기.ipynb
+++ b/project_1/3. 데이터 train, test별로 나누기.ipynb
@@ -34,7 +34,7 @@
     "    './전처리_완료(csv)/2026년도 전처리.csv'\n",
     "]\n",
     "df_test = pd.concat([pd.read_csv(file) for file in test_files], ignore_index=True)\n",
-    "df_test.to_csv('test.csv', index=False)"
+    "df_test.to_csv('x_test.csv', index=False)"
    ]
   },
   {
