--- a/project_1/5_1. 점수메기기.ipynb
+++ b/project_1/5_1. 점수메기기.ipynb
@@ -5863,6 +5863,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test.to_csv('./data/test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
