--- a/practice/pip설치.ipynb
+++ b/practice/pip설치.ipynb
@@ -388,6 +388,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting lightgbm\n",
+      "  Downloading lightgbm-4.6.0-py3-none-win_amd64.whl.metadata (17 kB)\n",
+      "Requirement already satisfied: numpy>=1.17.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from lightgbm) (1.26.4)\n",
+      "Requirement already satisfied: scipy in c:\\programdata\\anaconda3\\lib\\site-packages (from lightgbm) (1.13.1)\n",
+      "Downloading lightgbm-4.6.0-py3-none-win_amd64.whl (1.5 MB)\n",
+      "   ---------------------------------------- 0.0/1.5 MB ? eta -:--:--\n",
+      "   ---------------------------------------- 1.5/1.5 MB 10.9 MB/s eta 0:00:00\n",
+      "Installing collected packages: lightgbm\n",
+      "Successfully installed lightgbm-4.6.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install lightgbm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting xgboost\n",
+      "  Downloading xgboost-3.0.2-py3-none-win_amd64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (from xgboost) (1.26.4)\n",
+      "Requirement already satisfied: scipy in c:\\programdata\\anaconda3\\lib\\site-packages (from xgboost) (1.13.1)\n",
+      "Downloading xgboost-3.0.2-py3-none-win_amd64.whl (150.0 MB)\n",
+      "   ---------------------------------------- 0.0/150.0 MB ? eta -:--:--\n",
+      "    --------------------------------------- 2.4/150.0 MB 12.2 MB/s eta 0:00:13\n",
+      "   - -------------------------------------- 4.7/150.0 MB 11.9 MB/s eta 0:00:13\n",
+      "   - -------------------------------------- 7.3/150.0 MB 11.9 MB/s eta 0:00:12\n",
+      "   -- ------------------------------------- 9.7/150.0 MB 11.8 MB/s eta 0:00:12\n",
+      "   --- ------------------------------------ 12.3/150.0 MB 11.9 MB/s eta 0:00:12\n",
+      "   --- ------------------------------------ 14.7/150.0 MB 11.8 MB/s eta 0:00:12\n",
+      "   ---- ----------------------------------- 17.3/150.0 MB 11.9 MB/s eta 0:00:12\n",
+      "   ----- ---------------------------------- 19.7/150.0 MB 11.8 MB/s eta 0:00:12\n",
+      "   ----- ---------------------------------- 22.0/150.0 MB 11.8 MB/s eta 0:00:11\n",
+      "   ------ --------------------------------- 24.6/150.0 MB 11.8 MB/s eta 0:00:11\n",
+      "   ------- -------------------------------- 27.0/150.0 MB 11.8 MB/s eta 0:00:11\n",
+      "   ------- -------------------------------- 29.1/150.0 MB 11.6 MB/s eta 0:00:11\n",
+      "   -------- ------------------------------- 31.2/150.0 MB 11.4 MB/s eta 0:00:11\n",
+      "   -------- ------------------------------- 33.6/150.0 MB 11.5 MB/s eta 0:00:11\n",
+      "   --------- ------------------------------ 36.2/150.0 MB 11.5 MB/s eta 0:00:10\n",
+      "   ---------- ----------------------------- 38.5/150.0 MB 11.5 MB/s eta 0:00:10\n",
+      "   ---------- ----------------------------- 41.2/150.0 MB 11.5 MB/s eta 0:00:10\n",
+      "   ----------- ---------------------------- 43.5/150.0 MB 11.5 MB/s eta 0:00:10\n",
+      "   ------------ --------------------------- 46.1/150.0 MB 11.6 MB/s eta 0:00:09\n",
+      "   ------------ --------------------------- 48.5/150.0 MB 11.6 MB/s eta 0:00:09\n",
+      "   ------------- -------------------------- 51.1/150.0 MB 11.6 MB/s eta 0:00:09\n",
+      "   -------------- ------------------------- 53.5/150.0 MB 11.6 MB/s eta 0:00:09\n",
+      "   -------------- ------------------------- 56.1/150.0 MB 11.6 MB/s eta 0:00:09\n",
+      "   --------------- ------------------------ 58.5/150.0 MB 11.6 MB/s eta 0:00:08\n",
+      "   ---------------- ----------------------- 61.1/150.0 MB 11.6 MB/s eta 0:00:08\n",
+      "   ---------------- ----------------------- 63.4/150.0 MB 11.6 MB/s eta 0:00:08\n",
+      "   ----------------- ---------------------- 65.8/150.0 MB 11.6 MB/s eta 0:00:08\n",
+      "   ------------------ --------------------- 68.4/150.0 MB 11.6 MB/s eta 0:00:08\n",
+      "   ------------------ --------------------- 70.8/150.0 MB 11.6 MB/s eta 0:00:07\n",
+      "   ------------------- -------------------- 73.4/150.0 MB 11.6 MB/s eta 0:00:07\n",
+      "   -------------------- ------------------- 75.8/150.0 MB 11.6 MB/s eta 0:00:07\n",
+      "   -------------------- ------------------- 78.1/150.0 MB 11.6 MB/s eta 0:00:07\n",
+      "   --------------------- ------------------ 80.2/150.0 MB 11.6 MB/s eta 0:00:07\n",
+      "   --------------------- ------------------ 82.3/150.0 MB 11.5 MB/s eta 0:00:06\n",
+      "   ---------------------- ----------------- 84.7/150.0 MB 11.5 MB/s eta 0:00:06\n",
+      "   ----------------------- ---------------- 87.3/150.0 MB 11.5 MB/s eta 0:00:06\n",
+      "   ----------------------- ---------------- 89.1/150.0 MB 11.5 MB/s eta 0:00:06\n",
+      "   ------------------------ --------------- 91.5/150.0 MB 11.5 MB/s eta 0:00:06\n",
+      "   ------------------------- -------------- 94.1/150.0 MB 11.5 MB/s eta 0:00:05\n",
+      "   ------------------------- -------------- 96.5/150.0 MB 11.5 MB/s eta 0:00:05\n",
+      "   -------------------------- ------------- 99.1/150.0 MB 11.5 MB/s eta 0:00:05\n",
+      "   -------------------------- ------------ 101.4/150.0 MB 11.5 MB/s eta 0:00:05\n",
+      "   --------------------------- ----------- 104.1/150.0 MB 11.5 MB/s eta 0:00:04\n",
+      "   --------------------------- ----------- 106.4/150.0 MB 11.5 MB/s eta 0:00:04\n",
+      "   ---------------------------- ---------- 109.1/150.0 MB 11.5 MB/s eta 0:00:04\n",
+      "   ---------------------------- ---------- 111.4/150.0 MB 11.5 MB/s eta 0:00:04\n",
+      "   ----------------------------- --------- 114.0/150.0 MB 11.5 MB/s eta 0:00:04\n",
+      "   ------------------------------ -------- 116.4/150.0 MB 11.5 MB/s eta 0:00:03\n",
+      "   ------------------------------ -------- 119.0/150.0 MB 11.5 MB/s eta 0:00:03\n",
+      "   ------------------------------- ------- 121.4/150.0 MB 11.6 MB/s eta 0:00:03\n",
+      "   -------------------------------- ------ 123.2/150.0 MB 11.5 MB/s eta 0:00:03\n",
+      "   -------------------------------- ------ 125.6/150.0 MB 11.5 MB/s eta 0:00:03\n",
+      "   --------------------------------- ----- 128.2/150.0 MB 11.5 MB/s eta 0:00:02\n",
+      "   --------------------------------- ----- 130.5/150.0 MB 11.5 MB/s eta 0:00:02\n",
+      "   ---------------------------------- ---- 132.9/150.0 MB 11.5 MB/s eta 0:00:02\n",
+      "   ----------------------------------- --- 135.3/150.0 MB 11.5 MB/s eta 0:00:02\n",
+      "   ----------------------------------- --- 136.8/150.0 MB 11.4 MB/s eta 0:00:02\n",
+      "   ------------------------------------ -- 139.2/150.0 MB 11.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------ -- 141.6/150.0 MB 11.4 MB/s eta 0:00:01\n",
+      "   ------------------------------------- - 144.2/150.0 MB 11.4 MB/s eta 0:00:01\n",
+      "   --------------------------------------  146.5/150.0 MB 11.4 MB/s eta 0:00:01\n",
+      "   --------------------------------------  149.2/150.0 MB 11.4 MB/s eta 0:00:01\n",
+      "   --------------------------------------- 150.0/150.0 MB 11.3 MB/s eta 0:00:00\n",
+      "Installing collected packages: xgboost\n",
+      "Successfully installed xgboost-3.0.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found existing installation: lightgbm 4.6.0\n",
+      "Uninstalling lightgbm-4.6.0:\n",
+      "  Successfully uninstalled lightgbm-4.6.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Failed to remove contents in a temporary directory 'C:\\ProgramData\\anaconda3\\Lib\\site-packages\\~ightgbm'.\n",
+      "You can safely remove it manually.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting lightgbm\n",
+      "  Using cached lightgbm-4.6.0-py3-none-win_amd64.whl.metadata (17 kB)\n",
+      "Requirement already satisfied: numpy>=1.17.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from lightgbm) (1.26.4)\n",
+      "Requirement already satisfied: scipy in c:\\programdata\\anaconda3\\lib\\site-packages (from lightgbm) (1.13.1)\n",
+      "Using cached lightgbm-4.6.0-py3-none-win_amd64.whl (1.5 MB)\n",
+      "Installing collected packages: lightgbm\n",
+      "Successfully installed lightgbm-4.6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip uninstall lightgbm -y\n",
+    "!pip install lightgbm --upgrade\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
